--- a/cloudformation/StackSMUSDataSources.yaml
+++ b/cloudformation/StackSMUSDataSources.yaml
@@ -243,129 +243,41 @@ Resources:
             Principal: "*"
             Sid: "misc"
 
-  LambdaDDBInsert:
-    Type: 'AWS::Lambda::Function'
+  BasicNotebookInstance:
+    Type: AWS::SageMaker::NotebookInstance
     UpdateReplacePolicy: "Retain"
     DeletionPolicy: "Delete"
-    DependsOn: DynamoDB
     Properties:
-      Runtime: python3.13
-      Handler: index.handler
-      Role: !GetAtt LambdaDDBInsertRole.Arn
-      Environment:
-        Variables:
-          tableName: !Ref DynamoDB
-      Code:
-        ZipFile: |
-            import json
-            import boto3
-            import os
-            import urllib3
-            import logging
-            from typing import Dict, Any
+      InstanceType: "ml.t3.medium"
+      RoleArn: !GetAtt ExecutionRole.Arn
+      DirectInternetAccess: "Disabled"
+      SecurityGroupIds: 
+        - Ref: SecurityGroupId
+      SubnetId: !Select 
+        - 0
+        - !Ref SubnetIds
 
-            # Set up logging
-            logger = logging.getLogger()
-            logger.setLevel(logging.INFO)
-
-            # Initialize DynamoDB client
-            dynamodb = boto3.resource('dynamodb')
-            http = urllib3.PoolManager()
-
-            def send_response(event: Dict[str, Any], context: Any, response_status: str, response_data: Dict[str, Any]) -> None:
-                """Send a response to CloudFormation"""
-                response_body = {
-                    'Status': response_status,
-                    'Reason': f'See details in CloudWatch Log Stream: {context.log_stream_name}',
-                    'PhysicalResourceId': context.log_stream_name,
-                    'StackId': event['StackId'],
-                    'RequestId': event['RequestId'],
-                    'LogicalResourceId': event['LogicalResourceId'],
-                    'Data': response_data
-                }
-                
-                logger.info(f'Response body: {json.dumps(response_body)}')
-                
-                response_url = event['ResponseURL']
-                
-                try:
-                    response = http.request(
-                        'PUT',
-                        response_url,
-                        body=json.dumps(response_body).encode('utf-8'),
-                        headers={'Content-Type': 'application/json'}
-                    )
-                    logger.info(f'CloudFormation response status code: {response.status}')
-                    
-                except Exception as e:
-                    logger.error(f'Failed to send response to CloudFormation: {str(e)}')
-                    raise
-
-            def handler(event: Dict[str, Any], context: Any) -> None:
-                """Lambda function handler"""
-                try:
-                    # Get table name from environment variable
-                    table_name = os.environ.get('tableName')
-                    if not table_name:
-                        raise ValueError('tableName environment variable is required')
-                    
-                    logger.info(f'Starting to seed table: {table_name}')
-                    table = dynamodb.Table(table_name)
-                    
-                    # Items to add
-                    items_to_add = [
-                        {'customer_id': 1, 'invoice_number': 'INV-001', 'total': 200},
-                        {'customer_id': 2, 'invoice_number': 'INV-002', 'total': 200},
-                        {'customer_id': 3, 'invoice_number': 'INV-003', 'total': 200},
-                        {'customer_id': 4, 'invoice_number': 'INV-004', 'total': 200},
-                        {'customer_id': 5, 'invoice_number': 'INV-005', 'total': 200}
-                    ]
-                    
-                    # Use batch_writer for better performance
-                    with table.batch_writer() as batch:
-                        for item in items_to_add:
-                            batch.put_item(Item=item)
-                            logger.info(f'Added item with customer_id: {item["customer_id"]}')
-                    
-                    logger.info(f'Successfully added {len(items_to_add)} items to {table_name}')
-                    
-                    # Send success response to CloudFormation
-                    send_response(
-                        event, 
-                        context, 
-                        'SUCCESS',
-                        {'Result': f'Successfully added {len(items_to_add)} items to DynamoDB table'}
-                    )
-                    
-                except Exception as e:
-                    logger.error(f'Error: {str(e)}')
-                    # Send failure response to CloudFormation
-                    send_response(
-                        event,
-                        context,
-                        'FAILED',
-                        {'Error': str(e)}
-                    )
-                    raise
-      Timeout: 30
-  LambdaDDBInsertRole:
-    Type: 'AWS::IAM::Role'
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: lambda.amazonaws.com
-            Action: 'sts:AssumeRole'
+  ExecutionRole: 
+    Type: "AWS::IAM::Role"
+    UpdateReplacePolicy: "Retain"
+    DeletionPolicy: "Delete"
+    Properties: 
+      AssumeRolePolicyDocument: 
+        Version: "2012-10-17"
+        Statement: 
+          - 
+            Effect: "Allow"
+            Principal: 
+              Service: 
+                - "sagemaker.amazonaws.com"
+            Action: 
+              - "sts:AssumeRole"
+      Path: "/"
       ManagedPolicyArns:
-        - 'arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
-        - 'arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess'
-  RunLambdaDDBInsert:
-    Type: 'Custom::MyCustomResource'
-    Properties:
-      ServiceToken: !GetAtt LambdaDDBInsert.Arn      
-          
+        - arn:aws:iam::aws:policy/AmazonSageMakerFullAccess
+        - arn:aws:iam::aws:policy/AmazonECS_FullAccess
+        - arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess
+      
 Outputs:
   AuroraPGHost:
     Description: The Aurora PostgreSQL host
