Added env variables

--- a/cloudformation/StackSMUSDataSources.yaml
+++ b/cloudformation/StackSMUSDataSources.yaml
@@ -243,6 +243,17 @@ Resources:
             Principal: "*"
             Sid: "misc"
 
+  RDSMasterPWD:
+    Type: AWS::SSM::Parameter
+    UpdateReplacePolicy: "Retain"
+    DeletionPolicy: "Delete"
+    DependsOn: ["RDSCluster"]
+    Properties:
+      Description: Workaround
+      Name: "/rds/pwd"
+      Type: String
+      Value: !Join [ '', [ '{{resolve:secretsmanager:', !GetAtt RDSCluster.MasterUserSecret.SecretArn, ':SecretString:password}}' ] ]
+
   Notebook:
     Type: AWS::SageMaker::NotebookInstance
     UpdateReplacePolicy: "Retain"
@@ -261,15 +272,16 @@ Resources:
       Tags:
         - Key: AmazonDataZoneProject
           Value: !Ref AmazonDataZoneProject
-                           
-                                                                                                                     
-                                
-                                                                                                                                                                                                                                                                                                                                                                                                                        
+                                                                                                                                       
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
+                                                                                                            
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
 
   LifecycleConfig:
     Type: AWS::SageMaker::NotebookInstanceLifecycleConfig
     UpdateReplacePolicy: "Retain"
     DeletionPolicy: "Delete"
+    DependsOn: ["RDSCluster", "RDSMasterPWD"]
     Properties:
       NotebookInstanceLifecycleConfigName: !Sub "lifecycle-onstart"
       OnStart:
@@ -281,6 +293,7 @@ Resources:
                 touch /etc/profile.d/jupyter-env.sh
                 echo "export PG_HOST=${RDSCluster.Endpoint.Address}" >> /etc/profile.d/jupyter-env.sh
                 echo "export PG_SECRET_ARN=${RDSCluster.MasterUserSecret.SecretArn}" >> /etc/profile.d/jupyter-env.sh
+                echo "export PG_PWD=${RDSMasterPWD.Value}" >> /etc/profile.d/jupyter-env.sh
                 
                 # restart command is dependent on current running Amazon Linux and JupyterLab
                 CURR_VERSION=$(cat /etc/os-release)
@@ -301,7 +314,7 @@ Resources:
         Version: "2012-10-17"
         Statement: 
           - Effect: "Allow"
-                           
+                                                                                                                                       
             Principal: 
               Service: 
                 - "sagemaker.amazonaws.com"
@@ -318,9 +331,10 @@ Resources:
           - Resource: !GetAtt RDSCluster.MasterUserSecret.SecretArn
             Action:
             - "secretsmanager:GetSecretValue"
+            - "secretsmanager:DescribeSecret"
             Effect: "Allow"
         PolicyName: "sm"
-      
+
 Outputs:
   AuroraPGHost:
     Description: The Aurora PostgreSQL host
