--- a/cloudformation/StackSMUSDataSources.yaml
+++ b/cloudformation/StackSMUSDataSources.yaml
@@ -61,7 +61,6 @@ Resources:
       BackupRetentionPeriod: 1
       EnableIAMDatabaseAuthentication: true
       DeletionProtection: false
-      EnableCloudwatchLogsExports: [ error, slowquery ]
       VpcSecurityGroupIds:
         - !Ref SecurityGroupId
       Tags:
@@ -81,9 +80,10 @@ Resources:
       DBInstanceClass: "db.t4g.medium"
       MonitoringInterval: 0
       AutoMinorVersionUpgrade: true
-      EnablePerformanceInsights: true
-      PerformanceInsightsRetentionPeriod: 7
+      #EnablePerformanceInsights: true
+      #PerformanceInsightsRetentionPeriod: 1
       StorageEncrypted: true
+      BackupRetentionPeriod: 1
       Tags:
         - Key: "AmazonDataZoneProject"
           Value: !Ref AmazonDataZoneProject
@@ -103,11 +103,17 @@ Resources:
         Statement:
         - Condition:
             StringEquals:
-              kms:ViaService: !Sub "secretsmanager.${AWS::Region}.amazonaws.com"
+              kms:ViaService: 
+                - !Sub "secretsmanager.${AWS::Region}.amazonaws.com"
+                - !Sub "dynamodb.${AWS::Region}.amazonaws.com"
+                - !Sub "sagemaker.${AWS::Region}.amazonaws.com"
               kms:CallerAccount: !Ref AWS::AccountId
           Resource: "*"
           Action:
-          - "kms:*"
+          - "kms:Encrypt"
+          - "kms:Decrypt"
+          - "kms:GenerateDataKey*"
+          - "kms:DescribeKey"
           Effect: "Allow"
           Principal:
             AWS: "*"
@@ -253,6 +259,8 @@ Resources:
         PointInTimeRecoveryEnabled: true
       SSESpecification:
         SSEEnabled: true
+        SSEType: KMS
+        KMSMasterKeyId: !Ref KMSEncryptionKey
       Tags:
         - Key: AmazonDataZoneProject
           Value: !Ref AmazonDataZoneProject
@@ -309,6 +317,7 @@ Resources:
       PlatformIdentifier: notebook-al2-v3
       SecurityGroupIds: 
         - Ref: SecurityGroupId
+      KMSMasterKeyId: !Ref KMSEncryptionKey
       SubnetId: !Select 
         - 0
         - !Ref SubnetIds
